--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,6 +4,9 @@ phases:
   install:
     runtime-versions:
       python: 3.7
+    commands:
+      - python3.7 -m venv ~/.venv
+      - source ~/.venv/bin/activate
   pre_build:
     commands:
       - python3.7 -m venv ~/.venv
