--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 click==8.1.3
-Django==2.2
 Flask==2.0.3
-gunicorn==20.1.0
 importlib-metadata==4.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -11,3 +9,4 @@ sqlparse==0.4.2
 typing_extensions==4.3.0
 Werkzeug==2.1.2
 zipp==3.8.0
+pylint
