--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -4,7 +4,7 @@ branch-defaults:
     group_suffix: null
 global:
   application_name: flaskbeanstalk
-  branch: null
+  branch: master
   default_ec2_keyname: aws-eb
   default_platform: Python 3.8 running on 64bit Amazon Linux 2
   default_region: us-west-2
