--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,10 +1,10 @@
 branch-defaults:
   main:
-    environment: flash-test
+    environment: null
     group_suffix: null
 global:
-  application_name: flaskbeanstalk
-  branch: master
+  application_name: flask-tutorial
+  branch: null
   default_ec2_keyname: aws-eb
   default_platform: Python 3.8 running on 64bit Amazon Linux 2
   default_region: us-west-2
