--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,9 +1,9 @@
 branch-defaults:
   main:
-    environment: null
+    environment: flask-daniel-test
     group_suffix: null
 global:
-  application_name: flask-tutorial
+  application_name: flask-daniel
   branch: null
   default_ec2_keyname: aws-eb
   default_platform: Python 3.8 running on 64bit Amazon Linux 2
